# aicup_competition

./: README.md  pre_process.py  pyproject.toml  train.py
